<resources>
    <string name="username">User Name</string>
    <string name="enter_a_password">Enter a password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="sign_me_up">Sign me Up!</string>
    <string name="password">Password</string>
    <string name="retype_pw">Retype Password</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="app_name">CECS 453 HW1</string>
</resources>
